cmake_minimum_required(VERSION 3.20)
project(convert_sorted_array_to_binary_search_tree)

set(CMAKE_CXX_STANDARD 17)

add_executable(convert_sorted_array_to_binary_search_tree main.cpp)
add_subdirectory(binary-tree-playground)
target_link_libraries(convert_sorted_array_to_binary_search_tree binary_tree)
